--- a/app/src/main/res/layout-v21/inc_toolbar.xml
+++ b/app/src/main/res/layout-v21/inc_toolbar.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:elevation="@dimen/app_bar_elevation"
+    android:elevation="@dimen/elevation_4dp"
     android:stateListAnimator="@null">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/incToolbar_tb"
         style="@style/Toolbar"
-        app:popupTheme="@style/AppTheme.AppBarTheme" />
+        app:popupTheme="@style/App.ToolbarTheme" />
 
 </com.google.android.material.appbar.AppBarLayout>
