--- a/app/src/main/res/layout-v21/inc_toolbar_note.xml
+++ b/app/src/main/res/layout-v21/inc_toolbar_note.xml
@@ -25,18 +25,18 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="@dimen/app_bar_elevation"
+        android:elevation="@dimen/elevation_4dp"
         android:stateListAnimator="@null">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/incToolbar_tb"
             style="@style/Toolbar"
-            app:contentInsetEnd="@dimen/item_layout_medium_indent"
-            app:contentInsetLeft="@dimen/item_layout_medium_indent"
-            app:contentInsetRight="@dimen/item_layout_medium_indent"
-            app:contentInsetStart="@dimen/item_layout_medium_indent"
+            app:contentInsetEnd="@dimen/layout_8dp"
+            app:contentInsetLeft="@dimen/layout_8dp"
+            app:contentInsetRight="@dimen/layout_8dp"
+            app:contentInsetStart="@dimen/layout_8dp"
             app:navigationIcon='@{keyEdit &amp;&amp; !keyCreate ? @drawable/ic_cancel : @drawable/ic_arrow_back}'
-            app:popupTheme="@style/AppTheme.AppBarTheme">
+            app:popupTheme="@style/App.ToolbarTheme">
 
             <FrameLayout
                 android:layout_width="match_parent"
