--- a/app/src/main/res/layout-v21/inc_toolbar_rank.xml
+++ b/app/src/main/res/layout-v21/inc_toolbar_rank.xml
@@ -3,24 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:elevation="@dimen/app_bar_elevation"
+    android:elevation="@dimen/elevation_4dp"
     android:stateListAnimator="@null">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/incToolbar_tb"
         style="@style/Toolbar"
-        app:contentInsetEnd="@dimen/item_layout_medium_indent"
-        app:contentInsetLeft="@dimen/item_layout_medium_indent"
-        app:contentInsetRight="@dimen/item_layout_medium_indent"
-        app:contentInsetStart="@dimen/item_layout_medium_indent"
-        app:popupTheme="@style/AppTheme.AppBarTheme">
+        app:contentInsetEnd="@dimen/layout_8dp"
+        app:contentInsetLeft="@dimen/layout_8dp"
+        app:contentInsetRight="@dimen/layout_8dp"
+        app:contentInsetStart="@dimen/layout_8dp"
+        app:popupTheme="@style/App.ToolbarTheme">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardBackgroundColor="@color/colorPrimaryAccent"
-            app:cardUseCompatPadding="false"
-            app:cardCornerRadius="@dimen/card_corner_radius">
+            app:cardCornerRadius="@dimen/radius_2dp"
+            app:cardUseCompatPadding="false">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -28,43 +28,26 @@
 
                 <ImageButton
                     android:id="@+id/incToolbarRank_ib_cancel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/item_layout_small_indent"
-                    android:layout_marginEnd="@dimen/item_layout_small_indent"
-                    android:background="?attr/selectableItemBackgroundBorderless"
+                    style="@style/Enter.Button"
                     android:contentDescription="@null"
-                    android:padding="@dimen/item_layout_medium_indent"
                     app:srcCompat="@drawable/ic_cancel" />
 
                 <EditText
                     android:id="@+id/incToolbarRank_et_enter"
-                    style="@style/EditText"
+                    style="@style/Enter.Text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="@dimen/item_layout_medium_indent"
-                    android:layout_marginEnd="@dimen/item_layout_medium_indent"
                     android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
                     android:hint="@string/hint_enter_rank_new"
                     android:imeOptions="flagNoFullscreen|actionDone"
                     android:inputType="textCapSentences|textAutoCorrect|textAutoComplete"
                     android:maxLength="@integer/length_max_rank_name"
-                    android:maxLines="1"
-                    android:textSize="@dimen/text_big_size" />
+                    android:maxLines="1" />
 
                 <ImageButton
                     android:id="@+id/incToolbarRank_ib_add"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/item_layout_small_indent"
-                    android:layout_marginEnd="@dimen/item_layout_small_indent"
-                    android:background="?attr/selectableItemBackgroundBorderless"
+                    style="@style/Enter.Button"
                     android:contentDescription="@null"
-                    android:padding="@dimen/item_layout_medium_indent"
                     app:srcCompat="@drawable/ic_rank" />
 
             </LinearLayout>
