--- a/app/src/main/res/layout/frg_roll.xml
+++ b/app/src/main/res/layout/frg_roll.xml
@@ -55,40 +55,24 @@
                 android:layout_height="match_parent"
                 android:background="@color/colorPrimary"
                 android:orientation="horizontal"
-                android:padding="@dimen/item_layout_small_indent">
+                android:padding="@dimen/layout_4dp">
 
                 <EditText
                     android:id="@+id/frgRoll_et_enter"
-                    style="@style/EditText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginEnd="@dimen/item_layout_small_indent"
-                    android:layout_marginLeft="@dimen/item_layout_medium_indent"
-                    android:layout_marginRight="@dimen/item_layout_small_indent"
-                    android:layout_marginStart="@dimen/item_layout_medium_indent"
                     android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
+                    style="@style/Enter.Text"
                     android:hint="@string/hint_enter_roll"
                     android:imeOptions="flagNoFullscreen"
                     android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
-                    android:maxLines="5"
-                    android:textSize="@dimen/text_big_size" />
+                    android:maxLines="5" />
 
                 <ImageButton
                     android:id="@+id/frgRoll_ib_add"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@style/Enter.Button"
                     android:layout_gravity="bottom"
                     android:contentDescription="@null"
-                    android:layout_marginEnd="@dimen/item_layout_small_indent"
-                    android:layout_marginLeft="@dimen/item_layout_small_indent"
-                    android:layout_marginRight="@dimen/item_layout_small_indent"
-                    android:layout_marginStart="@dimen/item_layout_small_indent"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:padding="@dimen/item_layout_medium_indent"
                     app:srcCompat="@drawable/ic_add" />
 
             </LinearLayout>
