--- a/app/src/main/res/layout/inc_toolbar.xml
+++ b/app/src/main/res/layout/inc_toolbar.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:elevation="@dimen/app_bar_no_elevation">
+    app:elevation="@dimen/elevation_0dp">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/incToolbar_tb"
         style="@style/Toolbar"
-        app:popupTheme="@style/AppTheme.AppBarTheme" />
+        app:popupTheme="@style/App.ToolbarTheme" />
 
     <View style="@style/Divider.Horizontal" />
 
