--- a/app/src/main/res/layout/item_note_roll.xml
+++ b/app/src/main/res/layout/item_note_roll.xml
@@ -27,10 +27,10 @@
     </data>
 
     <androidx.cardview.widget.CardView
-        style="@style/ItemCardView"
+        style="@style/Card"
         app:cardBackgroundColor='@{Icon.getColor(context, false, itemNote.color)}'
         app:cardUseCompatPadding="false"
-        app:cardCornerRadius="@dimen/card_corner_radius">
+        app:cardCornerRadius="@dimen/radius_2dp">
 
         <LinearLayout
             android:id="@+id/itemNote_ll_click"
@@ -127,15 +127,15 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/item_layout_medium_indent"
+                android:layout_marginTop="@dimen/layout_8dp"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/itemNote_iv_rank"
                     style="@style/ItemNote.Indicator"
                     android:contentDescription="@null"
-                    android:layout_marginEnd="@dimen/item_layout_small_indent"
-                    android:layout_marginRight="@dimen/item_layout_small_indent"
+                    android:layout_marginEnd="@dimen/layout_4dp"
+                    android:layout_marginRight="@dimen/layout_4dp"
                     android:visibility='@{itemNote.rankId.length == 0 ? v.GONE : v.VISIBLE}'
                     app:srcCompat="@drawable/ic_rank" />
 
@@ -143,8 +143,8 @@
                     android:id="@+id/itemNote_iv_bind"
                     style="@style/ItemNote.Indicator"
                     android:contentDescription="@null"
-                    android:layout_marginEnd="@dimen/item_layout_small_indent"
-                    android:layout_marginRight="@dimen/item_layout_small_indent"
+                    android:layout_marginEnd="@dimen/layout_4dp"
+                    android:layout_marginRight="@dimen/layout_4dp"
                     android:visibility='@{itemNote.status ? v.VISIBLE : v.GONE}'
                     app:srcCompat="@drawable/ic_bind_roll" />
 
