--- a/app/src/main/res/layout/item_roll_write.xml
+++ b/app/src/main/res/layout/item_roll_write.xml
@@ -11,10 +11,10 @@
     </data>
 
     <androidx.cardview.widget.CardView
-        style="@style/ItemCardView"
+        style="@style/Card"
         app:cardBackgroundColor="@color/colorPrimary"
-        app:cardUseCompatPadding="false"
-        app:cardCornerRadius="@dimen/card_corner_radius">
+        app:cardCornerRadius="@dimen/radius_2dp"
+        app:cardUseCompatPadding="false">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,35 +24,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent">
 
-                <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:clickable="false"
-                    android:visibility="invisible" />
+                <CheckBox style="@style/ItemRoll.Write.Check" />
 
                 <ImageButton
                     android:id="@+id/itemRoll_ib_drag"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="?attr/selectableItemBackground"
+                    style="@style/ItemRoll.Write.Click"
                     android:contentDescription="@null"
-                    android:tint="@color/colorIcon"
                     app:srcCompat="@drawable/ic_move" />
 
             </FrameLayout>
 
             <EditText
                 android:id="@+id/itemRoll_et_enter"
-                style="@style/EditText"
+                style="@style/ItemRoll.Write.Enter"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
                 android:hint="@null"
-                android:imeOptions="flagNoFullscreen"
-                android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
-                android:padding="@dimen/item_layout_medium_indent"
-                android:text='@{itemRoll.text}'
-                android:textSize="@dimen/text_big_size" />
+                android:text='@{itemRoll.text}' />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
