--- a/app/src/main/res/values/sty_info.xml
+++ b/app/src/main/res/values/sty_info.xml
@@ -12,8 +12,8 @@
     </style>
 
     <style name="Info.Image">
-        <item name="android:layout_width">@dimen/icon_logo_size</item>
-        <item name="android:layout_height">@dimen/icon_logo_size</item>
+        <item name="android:layout_width">@dimen/icon_128dp</item>
+        <item name="android:layout_height">@dimen/icon_128dp</item>
         <item name="android:tint">@color/colorTextSecond</item>
     </style>
 
@@ -21,9 +21,9 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
-        <item name="android:padding">@dimen/item_layout_small_indent</item>
+        <item name="android:padding">@dimen/layout_4dp</item>
         <item name="android:textColor">@color/colorTextSecond</item>
-        <item name="android:textSize">@dimen/text_big_size</item>
+        <item name="android:textSize">@dimen/text_18sp</item>
     </style>
 
 </resources>
