--- a/app/src/main/res/values/sty_item_rank.xml
+++ b/app/src/main/res/values/sty_item_rank.xml
@@ -8,17 +8,17 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
-        <item name="android:padding">@dimen/item_layout_medium_indent</item>
+        <item name="android:padding">@dimen/layout_8dp</item>
     </style>
 
     <style name="ItemRank.Name">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginBottom">@dimen/item_layout_medium_indent</item>
+        <item name="android:layout_marginBottom">@dimen/layout_8dp</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
         <item name="android:textColor">@color/colorTextAccent</item>
-        <item name="android:textSize">@dimen/text_medium_size</item>
+        <item name="android:textSize">@dimen/text_16sp</item>
     </style>
 
     <style name="ItemRank.Info">
@@ -27,7 +27,7 @@
         <item name="android:ellipsize">start</item>
         <item name="android:singleLine">true</item>
         <item name="android:textColor">@color/colorTextAccent</item>
-        <item name="android:textSize">@dimen/text_small_size</item>
+        <item name="android:textSize">@dimen/text_14sp</item>
     </style>
 
 </resources>
