--- a/app/src/main/res/values/sty_item_sort.xml
+++ b/app/src/main/res/values/sty_item_sort.xml
@@ -7,8 +7,8 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center</item>
-        <item name="android:layout_marginLeft">@dimen/item_layout_small_indent</item>
-        <item name="android:layout_marginRight">@dimen/item_layout_small_indent</item>
+        <item name="android:layout_marginLeft">@dimen/layout_4dp</item>
+        <item name="android:layout_marginRight">@dimen/layout_4dp</item>
         <item name="android:tint">@color/colorTextSecond</item>
     </style>
 
@@ -16,12 +16,12 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
-        <item name="android:layout_marginTop">@dimen/item_layout_big_indent</item>
-        <item name="android:layout_marginBottom">@dimen/item_layout_big_indent</item>
+        <item name="android:layout_marginTop">@dimen/layout_16dp</item>
+        <item name="android:layout_marginBottom">@dimen/layout_16dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:ellipsize">end</item>
         <item name="android:layout_gravity">center</item>
-        <item name="android:textSize">@dimen/text_medium_size</item>
+        <item name="android:textSize">@dimen/text_16sp</item>
     </style>
 
 </resources>
