--- a/app/src/main/res/animator/strike_path_on.xml
+++ b/app/src/main/res/animator/strike_path_on.xml
@@ -13,8 +13,8 @@
         android:duration="@android:integer/config_shortAnimTime"
         android:interpolator="@android:anim/accelerate_decelerate_interpolator"
         android:propertyName="fillColor"
-        android:valueFrom="@color/colorIconSecond"
-        android:valueTo="@color/colorIcon"
+        android:valueFrom="@color/iconSecond"
+        android:valueTo="@color/icon"
         android:valueType="colorType" />
 
 </set>
