--- a/app/src/main/res/values/col_app.xml
+++ b/app/src/main/res/values/col_app.xml
@@ -3,43 +3,21 @@
 
     <color name="ic_launcher_background">#1C2024</color>
 
-    <color name="colorPrimary">#FFFFFF</color>
-    <color name="colorPrimarySecond">#b1b1b1</color>
-    <color name="colorPrimaryAccent">#FFFFFF</color>
-
     <color name="colorAccent">#039be5</color>
-    <color name="colorBackground">#fafafa</color>
 
-    <color name="colorIcon">#353535</color>
-    <color name="colorIconSecond">#b1b1b1</color>
-    <color name="colorIconAccent">#353535</color>
+    <color name="background">#fafafa</color>
+    <color name="backgroundSecond">#717171</color>
 
-    <color name="colorText">#353535</color>
-    <color name="colorTextSecond">#b1b1b1</color>
-    <color name="colorTextAccent">#353535</color>
+    <color name="primary">#FFFFFF</color> <!-- Этот меняется при смене темы Белый/Чёрный -->
+    <color name="primarySecond">#b1b1b1</color>
+    <color name="primaryAccent">#FFFFFF</color>
 
-    <color name="noteWhite">#ffffff</color>
-    <color name="noteRed">#ffcdd2</color>
-    <color name="notePurple">#e1bee7</color>
-    <color name="noteIndigo">#c5cae9</color>
-    <color name="noteBlue">#bbdefb</color>
-    <color name="noteTeal">#b2dfdb</color>
-    <color name="noteGreen">#c8e6c9</color>
-    <color name="noteYellow">#fff9c4</color>
-    <color name="noteOrange">#ffe0b2</color>
-    <color name="noteBrown">#d7ccc8</color>
-    <color name="noteBlueGrey">#cfd8dc</color>
+    <color name="icon">#353535</color> <!-- Этот меняется при смене темы Чёрный/Белый -->
+    <color name="iconSecond">#b1b1b1</color>
+    <color name="iconAccent">#353535</color>
 
-    <color name="noteWhiteDark">#c7c7c7</color>
-    <color name="noteRedDark">#cb9ca1</color>
-    <color name="notePurpleDark">#af8eb5</color>
-    <color name="noteIndigoDark">#9499b7</color>
-    <color name="noteBlueDark">#8aacc8</color>
-    <color name="noteTealDark">#82ada9</color>
-    <color name="noteGreenDark">#97b498</color>
-    <color name="noteYellowDark">#cbc693</color>
-    <color name="noteOrangeDark">#cbae82</color>
-    <color name="noteBrownDark">#a69b97</color>
-    <color name="noteBlueGreyDark">#9ea7aa</color>
+    <color name="text">#353535</color> <!-- Этот меняется при смене темы Чёрный/Белый -->
+    <color name="textSecond">#b1b1b1</color>
+    <color name="textAccent">#353535</color>
 
 </resources>
