--- a/app/src/main/res/values/sty_enter.xml
+++ b/app/src/main/res/values/sty_enter.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Enter"/>
+    <style name="Enter" />
 
     <style name="Enter.Button">
         <item name="android:layout_width">wrap_content</item>
@@ -20,7 +20,8 @@
         <item name="android:background">@android:color/transparent</item>
         <item name="android:focusable">true</item>
         <item name="android:focusableInTouchMode">true</item>
-        <item name="android:textSize">@dimen/text_16sp</item>
+        <item name="android:textSize">@dimen/text_18sp</item>
+        <item name="android:textColor">@color/textAccent</item>
     </style>
 
 </resources>
