--- a/app/src/main/res/values/sty_item_sort.xml
+++ b/app/src/main/res/values/sty_item_sort.xml
@@ -9,7 +9,7 @@
         <item name="android:layout_gravity">center</item>
         <item name="android:layout_marginLeft">@dimen/layout_4dp</item>
         <item name="android:layout_marginRight">@dimen/layout_4dp</item>
-        <item name="android:tint">@color/colorTextSecond</item>
+        <item name="android:tint">@color/textSecond</item>
     </style>
 
     <style name="ItemSort.Text">
